--- a/homework.ipynb
+++ b/homework.ipynb
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "sorted(p13, key=lambda x: x[1])\n",
+    "sorted(p13, key=lambda x: x[1], , reverse=True)\n",
     "\n",
     "# p13_sorted = []\n",
     "\n",
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        "array([1, 3, 5])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,19 +1131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p17 = np.full((1000000,3), q17)\n",
-    "# p17 = np.tile(q17, (1000000, 1))"
+    "# p17 = np.full((1000000,3), q17) # creates a copy\n",
+    "p17 = np.tile(q17, (1000000, 1)) # creates a view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "       [1, 3, 5]], shape=(1000000, 3))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1360,60 +1360,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>John</td>\n",
-       "      <td>Benjamin</td>\n",
+       "      <td>Michael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Benjamin</td>\n",
        "      <td>John</td>\n",
-       "      <td>Michael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Benjamin</td>\n",
-       "      <td>John</td>\n",
+       "      <td>Michael</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Benjamin</td>\n",
-       "      <td>Michael</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>John</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>Benjamin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Emily</td>\n",
        "      <td>Tom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Tom</td>\n",
-       "      <td>Emily</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     name_1    name_2\n",
-       "0      John  Benjamin\n",
-       "1      John   Michael\n",
-       "2  Benjamin      John\n",
-       "3  Benjamin   Michael\n",
-       "4   Michael      John\n",
-       "5   Michael  Benjamin\n",
-       "6     Emily       Tom\n",
-       "7       Tom     Emily"
+       "     name_1   name_2\n",
+       "0      John  Michael\n",
+       "1  Benjamin     John\n",
+       "2  Benjamin  Michael\n",
+       "3     Emily      Tom"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,12 +1399,19 @@
     "\n",
     "# q19.groupby(\"hometown\")\n",
     "\n",
-    "p19 = q19.merge(q19, on=\"hometown\")\n",
-    "# print(p19)\n",
+    "# p19 = q19.merge(q19, on=\"hometown\")\n",
+    "# # print(p19)\n",
     "\n",
-    "p19 = p19[p19[\"name_x\"] != p19[\"name_y\"]][[\"name_x\", \"name_y\"]] \\\n",
-    "    .reset_index(drop=True) \\\n",
-    "    .rename(columns={\"name_x\": \"name_1\", \"name_y\": \"name_2\"})\n",
+    "# p19 = p19[p19[\"name_x\"] != p19[\"name_y\"]][[\"name_x\", \"name_y\"]] \\\n",
+    "#     .reset_index(drop=True) \\\n",
+    "#     .rename(columns={\"name_x\": \"name_1\", \"name_y\": \"name_2\"})\n",
+    "\n",
+    "p19 = (\n",
+    "    q19.merge(q19, on=\"hometown\") \\\n",
+    "    .query(\"name_x < name_y\")[[\"name_x\", \"name_y\"]] \\\n",
+    "    .rename(columns={\"name_x\": \"name_1\", \"name_y\": \"name_2\"}) \\\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "p19"
    ]
