--- a/homework.ipynb
+++ b/homework.ipynb
@@ -937,7 +937,7 @@
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "sorted(p13, key=lambda x: x[1], , reverse=True)\n",
+    "p13 = sorted(p13, key=lambda x: x[1], reverse=True)\n",
     "\n",
     "# p13_sorted = []\n",
     "\n",
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "       [1, 3, 5]], shape=(1000000, 3))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
